--- a/format1.css
+++ b/format1.css
@@ -1,5 +1,5 @@
 Body{
-  background-color: White;
+  background-color: rgb(255,255,255);
    color: #000099;
    font-family: "Arial", sans-serif;
 }
