--- a/format1.css
+++ b/format1.css
@@ -3,4 +3,8 @@ Body{
    color: #000099;
    font-family: "Arial", sans-serif;
 }
+h1{
+  font-family: "Times New Roman", Serif;
+  color: Red;
+}
 
