--- a/Burgos.css
+++ b/Burgos.css
@@ -1,13 +1,12 @@
 Body{
-  background-color: rgb(238,249,64);
-   color: #49AC15;
+  background-color: rgb(30,108,242);
   font-family: "Times New Roman", Serif;
 }
 h1{
-  font-family: "Arial", sans-serif;
-  background-color: rgb(255,255,255);
-  color: rgb(13,240,51);
+   font-family: "Times New Roman", Serif;
+  color: rgb(0,0,0);
 }
-a:link { 
-    background-color: rgb(204,204,204);
+img {
+    display: block;
+    margin: 0 auto;
 }
