--- a/Unit6Project1.css
+++ b/Unit6Project1.css
@@ -1,1 +1,19 @@
-
+idfloatleft{
+  background-color: rgb(238,249,64);
+   color: #49AC15;
+  font-family: "Times New Roman", Serif;
+}
+classheadlinedot{
+  font-family: "Arial", sans-serif;
+  background-color: rgb(255,255,255);
+  color: rgb(13,240,51);
+}
+idabsolutegray{ 
+    background-color: rgb(204,204,204);
+}
+classrelativegreen{ 
+    background-color: rgb(204,204,204);
+}
+idfixedgray{ 
+    background-color: rgb(204,204,204);
+}
