--- a/Unit6Project1.css
+++ b/Unit6Project1.css
@@ -1,12 +1,12 @@
 idfloatleft{
-  background-color: rgb(238,249,64);
-   color: #49AC15;
-  font-family: "Times New Roman", Serif;
+  background-color: rgb(245,245,220);
+   float: left;
+  margin: 0 0 10px 10px;
+  font-family: "Verdana", Serif;
 }
 classheadlinedot{
-  font-family: "Arial", sans-serif;
-  background-color: rgb(255,255,255);
-  color: rgb(13,240,51);
+  color: rgb(255,0,0;
+   border-bottom: thick dotted #0000FF;
 }
 idabsolutegray{ 
     background-color: rgb(204,204,204);
