--- a/Unit6Project1.css
+++ b/Unit6Project1.css
@@ -6,8 +6,8 @@ idfloatleft{
   padding: 20px;
 }
 classheadlinedot{
-   color: rgb(255,0,0);
-   border-bottom: thick dotted #0000FF;
+ color: rgb(255,0,0);
+ border-bottom: thick dotted #0000FF;
 }
 idabsolutegray{ 
   padding: 25px 50px;
@@ -17,12 +17,13 @@ idabsolutegray{
 
 }
 classrelativegreen{ 
-    position: relative;
-    padding: 15px;
-    background-color: rgb(147,219,112)
+  position: relative;
+  padding: 15px;
+  background-color: rgb(147,219,112)
 }
 idfixedgray{ 
-   position: relative;
-   background-color: rgb(211,211,211);
-   padding: 10px;
+ position: fixed;
+ background-color: rgb(211,211,211);
+ padding: 10px;
+ font-weight: bold;
 }
