--- a/mylinks.css
+++ b/mylinks.css
@@ -1,13 +1,19 @@
 Body{
-  background-color: rgb(238,249,64);
-   color: #49AC15;
-  font-family: "Times New Roman", Serif;
+  background-color: rgb(0,0,0);
+   color: #FFFFFF;
 }
-h1{
-  font-family: "Arial", sans-serif;
-  background-color: rgb(255,255,255);
-  color: rgb(13,240,51);
+/* unvisited link */
+a:link {
+    color: red;
 }
-a:link { 
-    background-color: rgb(204,204,204);
+
+/* visited link */
+a:visited {
+    color: gray;
+}
+
+/* mouse over link */
+a:hover {
+    color: yellow;
+    background-color: rgb(229,13,13);
 }
