--- a/mylinks.css
+++ b/mylinks.css
@@ -1,6 +1,10 @@
 Body{
   background-color: rgb(0,0,0);
    color: #FFFFFF;
+   
+}
+ul.nav { 
+  text-align: center;
 }
 /* unvisited link */
 a:link {
