--- a/Movie8.css
+++ b/Movie8.css
@@ -1,13 +1,12 @@
+h1 {
+    background-color:rgb(13,240,51);
+} 
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+    
 }
 
 td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
+   
 }
 
 tr:nth-child(even) {
