--- a/Movie8.css
+++ b/Movie8.css
@@ -15,5 +15,6 @@ tr:nth-child(even) {
    background-color: #dddddd;
  }
  video {
-     Align:Center;
+     display: block;
+    margin: 0 auto;
  }
