--- a/Movie8.css
+++ b/Movie8.css
@@ -16,3 +16,11 @@ tr:nth-child(even) {
      display: block;
     margin: 0 auto;
  }
+ div {
+    height: 200px;
+    background: grey; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left top, silver, darkblue); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right,silver, darkblue); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right,silver, darkblue); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, silver, darkblue); /* Standard syntax (must be last) */
+}
