--- a/Movie8.css
+++ b/Movie8.css
@@ -16,7 +16,7 @@ tr:nth-child(even) {
      display: block;
     margin: 0 auto;
  }
- div {
+body {
     height: 200px;
     background: grey; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(left top, silver, darkblue); /* For Safari 5.1 to 6.0 */
