--- a/Movie8.css
+++ b/Movie8.css
@@ -9,9 +9,9 @@ td, th {
     text-align: left;
     padding: 8px; 
  }
-tr:nth-child(even) {
+/*tr:nth-child(even) {
    background-color: #949191;
- }
+ }*/
  video {
      display: block;
     margin: 0 auto;
