--- a/Movie8.css
+++ b/Movie8.css
@@ -18,11 +18,11 @@ td, th {
     margin: 0 auto;
  }
 body {
-    background-image: grey; /* For browsers that do not support gradients */
-    background-image: -webkit-linear-gradient(to right, silver, darkblue); /* For Safari 5.1 to 6.0 */
-    background-image: -o-linear-gradient(to right,silver, darkblue); /* For Opera 11.1 to 12.0 */
-    background-image: -moz-linear-gradient(to right,silver, darkblue); /* For Firefox 3.6 to 15 */
-    background-image: linear-gradient(to right, silver, darkblue); /* Standard syntax (must be last) */
+    background-image: white; /* For browsers that do not support gradients */
+    background-image: -webkit-linear-gradient(to right, red, yellow); /* For Safari 5.1 to 6.0 */
+    background-image: -o-linear-gradient(to right,red, yellow); /* For Opera 11.1 to 12.0 */
+    background-image: -moz-linear-gradient(to right,red, yellow); /* For Firefox 3.6 to 15 */
+    background-image: linear-gradient(to right, red, yellow); /* Standard syntax (must be last) */
     color: white;
 }
 h1 {
