--- a/Movie8.css
+++ b/Movie8.css
@@ -18,7 +18,7 @@ td, th {
     margin: 0 auto;
  }
 body {
-    background-image: white; /* For browsers that do not support gradients */
+    background-image: grey; /* For browsers that do not support gradients */
     background-image: -webkit-linear-gradient(to right, red, yellow); /* For Safari 5.1 to 6.0 */
     background-image: -o-linear-gradient(to right,red, yellow); /* For Opera 11.1 to 12.0 */
     background-image: -moz-linear-gradient(to right,red, yellow); /* For Firefox 3.6 to 15 */
