--- a/Movie8.css
+++ b/Movie8.css
@@ -2,7 +2,7 @@
 table {
     font-family: Times New Roman, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 500px;
     color: white;
  }
 td, th {
