--- a/Movie8.css
+++ b/Movie8.css
@@ -4,6 +4,7 @@ table {
     border-collapse: collapse;
     width: 500px;
     color: white;
+    align: center;
  }
 td, th {
    border: 2px solid #000000;
@@ -19,10 +20,10 @@ td, th {
  }
 body {
     background-image: grey; /* For browsers that do not support gradients */
-    background-image: -webkit-linear-gradient(to right, red, yellow); /* For Safari 5.1 to 6.0 */
-    background-image: -o-linear-gradient(to right,red, yellow); /* For Opera 11.1 to 12.0 */
-    background-image: -moz-linear-gradient(to right,red, yellow); /* For Firefox 3.6 to 15 */
-    background-image: linear-gradient(to right, red, yellow); /* Standard syntax (must be last) */
+    background-image: -webkit-linear-gradient(left top, yellow, red); /* For Safari 5.1 to 6.0 */
+    background-image: -o-linear-gradient(bottom right, yellow, red); /* For Opera 11.1 to 12.0 */
+    background-image: -moz-linear-gradient(bottom right, yellow, red); /* For Firefox 3.6 to 15 */
+    background-image: linear-gradient(to bottom right,  yellow, red); /* Standard syntax (must be last) */
     color: white;
 }
 h1 {
