--- a/Band8.css
+++ b/Band8.css
@@ -13,19 +13,11 @@ td, th {
 /*tr:nth-child(even) {
    background-color: #949191;
  }*/
- video {
+ audio {
      display: block;
     margin: 0 auto;
  }
-body {
-    background-image: grey; /* For browsers that do not support gradients */
-    background-image: -webkit-linear-gradient(left top, #1A6CB8, silver); /* For Safari 5.1 to 6.0 */
-    background-image: -o-linear-gradient(bottom right, #1A6CB8, silver); /* For Opera 11.1 to 12.0 */
-    background-image: -moz-linear-gradient(bottom right, #1A6CB8, silver); /* For Firefox 3.6 to 15 */
-    background-image: linear-gradient(to bottom right,  #1A6CB8, silver); /* Standard syntax (must be last) */
-    color: white;
-}
-h1 {
+ h1 {
     Color: white;
 }
 img
@@ -34,3 +26,12 @@ img
     margin-left: auto;
     margin-right: auto }
 }
+body {
+    background-image: grey; /* For browsers that do not support gradients */
+    background-image: -webkit-linear-gradient(left top, #1A6CB8, silver); /* For Safari 5.1 to 6.0 */
+    background-image: -o-linear-gradient(bottom right, #1A6CB8, silver); /* For Opera 11.1 to 12.0 */
+    background-image: -moz-linear-gradient(bottom right, #1A6CB8, silver); /* For Firefox 3.6 to 15 */
+    background-image: linear-gradient(to bottom right,  #1A6CB8, silver); /* Standard syntax (must be last) */
+    color: white;
+}
+
