--- a/Band8.css
+++ b/Band8.css
@@ -18,6 +18,7 @@ img
     {
     display: block;
     margin-left: auto;
+    margin-right: auto;
 }
 body {
    /* background-image: gray; /* For browsers that do not support gradients */
@@ -25,5 +26,5 @@ body {
    /* background-image: -o-linear-gradient(bottom right,blue, white); /* For Opera 11.1 to 12.0 */
    /* background-image: -moz-linear-gradient(bottom right, blue, white); /* For Firefox 3.6 to 15 */
     background-image: linear-gradient(to bottom right,  blue, white); /* Standard syntax (must be last) */
+    color: white;
 }
-
