--- a/Band8.css
+++ b/Band8.css
@@ -1,4 +1,4 @@
-/*table {
+table {
     font-family: Times New Roman, sans-serif;
     border-collapse: collapse;
     width: 500px;
@@ -14,16 +14,16 @@ td, th {
  audio {
      display: block;
     margin: 0 auto;
- }*/
+ }
 body {
     background-image: gray; /* For browsers that do not support gradients */
-    background-image: -webkit-linear-gradient(left top, yellow, red); /* For Safari 5.1 to 6.0 */
-    background-image: -o-linear-gradient(bottom right, yellow, red); /* For Opera 11.1 to 12.0 */
-    background-image: -moz-linear-gradient(bottom right, yellow, red); /* For Firefox 3.6 to 15 */
-    background-image: linear-gradient(to bottom right,  yellow, red); /* Standard syntax (must be last) */
+    background-image: -webkit-linear-gradient(left top, #1A6CB8, silver); /* For Safari 5.1 to 6.0 */
+    background-image: -o-linear-gradient(bottom right, #1A6CB8, silver); /* For Opera 11.1 to 12.0 */
+    background-image: -moz-linear-gradient(bottom right, #1A6CB8, silver); /* For Firefox 3.6 to 15 */
+    background-image: linear-gradient(to bottom right,  #1A6CB8, silver); /* Standard syntax (must be last) */
     color: white;
 }
-/*h1 {
+h1 {
     color: white;
 }
 img
@@ -32,4 +32,3 @@ img
     margin-left: auto;
     margin-right: auto }
 }
-*/
