--- a/Band8.css
+++ b/Band8.css
@@ -36,7 +36,7 @@ img
     table {
     font-family: Times New Roman, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 500px;
     color: white;
  
  }
