--- a/MusicSurvey.css
+++ b/MusicSurvey.css
@@ -25,8 +25,11 @@ body {
     /*background-image: linear-gradient(to bottom right,  #1A6CB8, silver); /* Standard syntax (must be last) */
     color: white;
 }
-form{ background-color: #eaeaea;
-       padding: 10px;
+form{ 
+    background-color: #eaeaea;
+    padding: 10px;
+    display: inline-block;
+    text-align: center;
     }
 fieldset { 
     width: 320px;
