--- a/Band8.css
+++ b/Band8.css
@@ -66,8 +66,7 @@ img
     margin-left: auto;
     margin-right: auto }
 }
-form  {
-    display: inline-block;
-    text-align: center;
-    }
-
+form {
+    width: 500px;
+    margin: 0 auto;
+}
