--- a/WebhostingSites.css
+++ b/WebhostingSites.css
@@ -18,7 +18,7 @@ td, th {
     margin: 0 auto;
  }
 body {
-    background-color: #35dfd2;
+    background-color: #26a399;
     color: white;
 }
 h1 {
