--- a/DogsAndPupsHome.css
+++ b/DogsAndPupsHome.css
@@ -79,6 +79,83 @@ header{
 	position:fixed;
 	line-height:60px;
 }
+
+section{
+	margin:0;
+	padding: 15px;
+	padding-top: 60px;
+	background-color: #efefef;
+	font-size: 125%;
+}
+
+section > h2{
+	text-align:center;
+	background-color: #2b5b84;
+	color: white;
+	border-bottom: 1px solid black;
+}
+
+section > h3{
+	text-align: center;
+}
+section > h4{
+	text-align: center;
+}
+section > p{
+	margin-left: 10%;
+	margin-right:10%;
+	line-height: 1.2;
+}
+section > pre{
+	width: 80%;
+	margin: auto;
+}
+#tutlinks{
+	margin-left: 10%;
+}
+.videoWrapper{
+	margin-left: 10%;
+}
+table{
+	border-collapse: collapse;
+	width: 75%;
+	margin: auto;
+	color: #313131;
+}
+table tr{
+	background-color: white;
+	border: 1px solid #ccc;
+}
+th{
+	background-color: #ddd;
+	border: 1px solid #ccc;
+	padding: 8px;
+}
+td{
+	border: 1px solid #ccc;
+	padding: 8px;
+}
+.nohighlight{
+	background-color: #ebe4e0;
+	border-radius: 0.3em;
+}
+section  a{
+	text-decoration: none;
+}
+section a:link{
+	color: #34508c;
+}
+section a:visited{
+	color: gray;
+}
+section a:hover{
+	background-color: #c2c6ce;
+	border-radius: 0.2em;
+}
+section a:active{
+	color: blue;
+}
+
 .hamburger{
 	background:none;
 	position:absolute;
