--- a/DogsAndPupsHome.css
+++ b/DogsAndPupsHome.css
@@ -40,7 +40,7 @@ img
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #e1e1ee;
 }
 
 #header li {
