--- a/AmIReady.css
+++ b/AmIReady.css
@@ -13,7 +13,7 @@ img
     {
     display: block;
     margin-left: auto;
-    margin-right: auto }
+    margin-right: auto; }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024) {
@@ -31,13 +31,14 @@ img
     {
     display: block;
     margin-left: auto;
-    margin-right: auto }
+    margin-right: auto; }
 }
 
 /*Header Code*/
 .div {
-   display: table;
-    margin: 0 auto;  
+   display: block;
+    margin-left: auto;
+    margin-right: auto; 
 }
 #header ul {
      display: table;
