--- a/DogsAndPupsHome.css
+++ b/DogsAndPupsHome.css
@@ -46,7 +46,7 @@ img
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #e1e1ee;
+    background-color: #6C7570;
 }
 
 #header li {
