--- a/DogsAndPupsHome.css
+++ b/DogsAndPupsHome.css
@@ -35,9 +35,9 @@ img
 }
 
 /*Header Code*/
-.div {
-   display: table;
-    margin: 0 auto;  
+.NavButtons {
+   margin: 0 auto;
+     width: 100px; 
 }
 #header ul {
      display: table;
