--- a/DogsAndPupsHome.css
+++ b/DogsAndPupsHome.css
@@ -37,7 +37,7 @@ img
 /*Header Code*/
 .NavButtons {
    margin: 0 auto;
-     width: 700px; 
+     width: 0 auto; 
 }
 #header ul {
      display: table;
