--- a/DogServices.css
+++ b/DogServices.css
@@ -35,32 +35,29 @@ img
 }
 
 /*Header Code*/
-.div {
-   display: table;
-    margin: 0 auto;  
+.NavButtons{
+    text-align: center;   
 }
+
 #header ul {
-     display: table;
-    margin: 0 auto;
+    
     list-style-type: none;
-    margin: 0;
-    padding: 0;
     overflow: hidden;
-    background-color: #e1e1ee;
+    background-color: #6C7570;
 }
 
 #header li {
-    float: left;
+     display:inline-block;
 }
 
 #header li a {
-    display: block;
+     display:inline-block;
     color: white;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
+    text-decoration:none
 }
 
 #header li a:hover {
-    background-color: #111;
+    background-color: #b3b3b3;
 }
