--- a/FAQs.css
+++ b/FAQs.css
@@ -6,6 +6,10 @@ body {
     /*background-image: linear-gradient(to bottom right,  #1A6CB8, silver); /* Standard syntax (must be last) */
     color: white;
 }
+ audio {
+     display: block;
+    margin: 0 auto;
+ }
 h1 {
     color: white;
 }
