--- a/AmIReady.css
+++ b/AmIReady.css
@@ -33,6 +33,9 @@ img
     margin-left: auto;
     margin-right: auto; }
 }
+.questions > li {
+    font-weight: bold;
+}
 
 /*Header Code*/
 .NavButtons{
