--- a/MyStory.css
+++ b/MyStory.css
@@ -13,11 +13,14 @@ body {
 h1 {
     color: white;
 }
-img
-    {
+img {
     display: block;
     margin-left: auto;
     margin-right: auto }
+div {
+    width: 300px;
+    padding: 25px;
+    margin: 25px;
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024) {
