--- a/MyStory.css
+++ b/MyStory.css
@@ -17,7 +17,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto }
-div {
+.Story {
     width: 300px;
     padding: 25px;
     margin: 25px;
