--- a/MyStory.css
+++ b/MyStory.css
@@ -18,6 +18,7 @@ img {
     margin-left: auto;
     margin-right: auto }
 .Story {
+    text-align: center; 
     width: 300px;
     padding: 25px;
     margin: 25px;
@@ -36,6 +37,7 @@ h1 {
 }
 img
     {
+         
     display: block;
     margin-left: auto;
     margin-right: auto }
