--- a/MyStory.css
+++ b/MyStory.css
@@ -13,10 +13,10 @@ body {
 h1 {
     color: white;
 }
-img {
+/*img {
     display: block;
     margin-left: auto;
-    margin-right: auto }
+    margin-right: auto }*/
 .Story {
     text-align: center; 
     width: 600px;
