--- a/MyStory.css
+++ b/MyStory.css
@@ -18,10 +18,9 @@ h1 {
     margin-left: auto;
     margin-right: auto }*/
 .Story {
-    text-align: center; 
+   margin: auto;
     width: 600px;
-    padding: 100px;
-    margin: 2px;
+    padding: 10px;
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024) {
